<resources>
    <string name="app_name">Kuiki</string>
    <string name="string_next">Next</string>
    <string name="string_verify_phone">VERIFY</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_ok">Ok</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_submit">Submit</string>
    <string name="string_close">Close</string>
    <string name="string_verification">Phone verification</string>
    <string name="string_entercode">Enter the code we sent you</string>
    <string name="string_notcode">I have not received the code</string>
    <string name="string_sms">A SMS should arrive shortly at</string>
    <string name="string_create">Complete your profile</string>
    <string name="string_wrongcode">Wrong verify code.</string>
    <string name="permission_deny">Kuiki needs to access to your position as well as your phone to make calls when you ask it to. Allow Phone and Location permissions in your phone settings in order to use Kuiki</string>
    <string name="string_register">Register</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="failed_verify">Verify failed</string>
    <string name="cancel_ride">Passenger Cancelled the Ride.</string>
    <string name="no_taxi">No nearest taix.</string>
    <string name="profile_update_ok">Your profile was updated successfully.</string>
    <string name="review_verify">ID verification is under review.</string>
    <string name="submit_verify">Your request has been submitted successfully.</string>
    <string name="failed_verify_submit">Failed. Try again</string>
    <string name="payment_completed">Payment completed</string>
    <string name="payment_failed">Payment failed</string>
    <string name="string_authenticating">Authenticating...</string>
    <string name="string_first_name">Enter your first name</string>
    <string name="string_last_name">Enter your last name</string>
    <string name="string_email">Enter your email address</string>
    <string name="string_email_invalid">Enter valid email address</string>
    <string name="string_review_submit">Your review submitted.</string>
    <string name="string_offline">Please Offline.</string>
    <string name="string_accept">Accept</string>
    <string name="string_accept_mxn">Aceptar MXN</string>
    <string name="string_waiting">Waiting</string>
    <string name="string_pickup">I HAVE ARRIVED</string>
    <string name="string_waiting_payment">Waiting for payment</string>
    <string name="string_paid">Paid</string>
    <string name="string_complete">Complete</string>
    <string name="string_give_review">Leave a review</string>
    <string name="string_offer">Enter your offer price</string>
    <string name="string_minimum">Minuimum price is MXN</string>
    <string name="string_phone_invalid">Invalid phone number</string>
    <string name="string_registering">Registering...</string>
    <string name="string_profile_image">Select your profile image</string>
    <string name="string_pay">P A Y</string>
    <string name="string_waiting_taxi">Waiting for taxi</string>
    <string name="string_submitting">Submitting...</string>
    <string name="string_id_front">Select the front image of your ID.</string>
    <string name="string_id_back">Select the back image of your ID.</string>
    <string name="string_brand">Select a brand of your car</string>
    <string name="string_car_image">Photo of the car with visible plate</string>
    <string name="string_car_plate">Enter the plate number of your car</string>
    <string name="string_birthday">Select your birthday image</string>
    <string name="string_where">Where do we go?</string>
    <string name="string_driver_mode">Driver Mode</string>
    <string name="string_passenger_mode">Passenger Mode</string>
    <string name="string_profile_title">Profile</string>
    <string name="string_save_change">Save Change</string>
    <string name="string_rate_user">Rate user</string>
    <string name="string_polite">Polite passenger</string>
    <string name="string_good_talk">Good talk</string>
    <string name="string_rude">Rude passenger</string>
    <string name="string_conflictive">Conflictive passenger</string>
    <string name="string_setting">Setting</string>
    <string name="string_help">Help</string>
    <string name="string_where_from">Where do we pick you up?</string>
    <string name="string_other_offer">Other Offers</string>
    <string name="string_setting_price">Checking rates…</string>
    <string name="string_pick_rate">Pick your rate:</string>
    <string name="string_other_rate">Other rates</string>
    <string name="string_select_rate">Select rate</string>
    <string name="string_rate_driver">Rate Driver</string>
    <string name="string_your_felt">Select what you felt</string>
    <string name="string_clean">Clean car</string>
    <string name="string_good_music">Good music</string>
    <string name="string_good_driver">Good driver</string>
    <string name="string_nice_talk">Nice talk</string>
    <string name="string_comment_hint">Enter your comment</string>
    <string name="string_calculate">Calculating...</string>
    <string name="string_select_offer">Select your offer</string>
    <string name="string_recommend">Recommended price</string>
    <string name="string_your_offer">Place your offer</string>
    <string name="string_will_get">You will get offer from driver.</string>
    <string name="string_phone_sign">Enter your phone number to sign in</string>
    <string name="string_phone">Enter your phone number</string>
    <string name="string_sign_out">Sign Out</string>
    <string name="string_verify">Verify to be driver</string>
    <string name="string_id_verify">1. ID verification</string>
    <string name="string_front">Front</string>
    <string name="string_back">Back</string>
    <string name="string_profile_complete">2. Complete profile</string>
    <string name="string_config_car">3. Configure your car</string>
    <string name="string_select_brand">Brand</string>
    <string name="string_select_sub_brand">Sub-brand</string>
    <string name="string_plate">Car plate number</string>
    <string name="string_birth">Select birthday certificate</string>
    <string name="string_ride_history">Ride History</string>
    <string name="string_payment">Payment</string>
    <string name="string_promos">Promos</string>
    <string name="string_offer_history">Trip Offers</string>
    <string name="string_payment_method">Select payment method</string>
    <string name="string_location">Location</string>
    <string name="string_hint_firstname">First name</string>
    <string name="string_hint_secondname">Last name</string>
    <string name="string_hint_email">Email</string>
    <string name="string_hint_phone">Phone number</string>
    <string name="string_plate_hint">Plate number</string>
    <string name="string_offer_trip">Offer trip</string>
    <string name="string_time">What’s your estimated arrival time?</string>
    <string name="string_offer_rejected">Your offer has been rejected</string>
    <string name="string_offer_reject">Reject</string>
    <string name="string_end_trip">END THE TRIP</string>
    <string name="string_driver_way">THE DRIVER IS ON THE WAY</string>
    <string name="string_trip_complete_question">Have you completed the trip?</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_incomplete_reason">Why you haven’t completed the trip?</string>
    <string name="string_incomplete_comment">Enter the reason</string>
    <string name="string_refuse_trip">I refuse to complete the trip</string>
    <string name="string_other_reason">Other reason</string>
    <string name="string_cancel_reason">Why do you want to cancel?</string>
    <string name="string_trip_ask_cancel_trip">Do you really want to cancel?</string>
    <string name="string_didnot_showup">Passenger didn\'t show up</string>
    <string name="string_fake_offer">Fake request</string>
    <string name="string_refuse_offer">I refuse to complete the trip</string>
    <string name="string_enter_reason">You must enter the reason</string>
    <string name="string_navigation">Navigation</string>
    <string name="string_placing_offer">Placing your offer, wait...</string>
    <string name="string_searching_driverr">Searching for driver, wait...</string>
    <string name="string_pick_location">Pick up location</string>
    <string name="string_pick_destination">Destination</string>
    <string name="string_make_offer">Make offer</string>
    <string name="string_comment_wish">Comments and wishes</string>
    <string name="string_calculate_distance">Calculating distance…</string>
    <string name="string_total_distance">Total distance</string>
    <string name="string_cash">Cash</string>
    <string name="string_no_whatsapp">You do not have WhatsApp installed on your phone.</string>
    <string name="string_increase_offer">Increase the offer</string>
    <string name="string_passenger_notify">The passenger has been notified</string>
    <string name="string_passenger_arrive">The passenger has arrived</string>
    <string name="string_passenger_call">Call</string>
    <string name="string_passenger_accept">The request was accepted for %1$s. Driver will be arrived in %2$s.</string>
    <string name="string_driver_arrive">The driver has arrived.</string>
    <string name="string_dont_late">Don\'t be late or your rate can decrease.</string>
    <string name="string_city">City</string>
    <string name="string_trip_history">Trip history</string>
    <string name="string_privacy">Safety and protection</string>
    <string name="string_support">Support</string>
    <string name="string_find_offer">Looking for offers...</string>
    <string name="string_passenger_understood">Understood, going out.</string>
    <string name="string_trip">Trip</string>
    <string name="string_delivery">Delivery</string>
    <string name="string_select_first">Point your current location on the map.</string>
    <string name="string_select_second">Point the destination on the map.</string>
    <string name="string_select_location">Select this location</string>
    <string name="string_notify_driver_arrive">The driver has arrived, meet him at the pick up point.</string>
    <string name="string_notify_passenger_cancel">The passenger has cancelled the trip.</string>
    <string name="string_notify_passenger_accept">The driver is on the way and will arrive in  %1$s minutes.</string>
    <string name="string_notify_driver_cancel">The driver has cancelled the trip.</string>
    <string name="string_notify_passenger_going">The passenger is going out.</string>
    <string name="string_passenger_cancel_trip">Do you really want to cancel the trip?</string>
    <string name="string_passenger_why_cancel">Why do you want to cancel?</string>
    <string name="string_dont_service">I don\'t need the service</string>
    <string name="string_complain_driver">Complain about the driver</string>
    <string name="string_other_question">Other</string>
    <string name="string_waiting_passenger">Waiting for passenger</string>
    <string name="string_driver_late">Estás llegando tarde, llama al pasajero.</string>
    <string name="string_trip_completed">Completed</string>
    <string name="string_trip_canceled">Canceled</string>
    <string name="string_cancel_reason_text">Enter your reason</string>
    <string name="string_cancel_trip">Cancel trip</string>
    <string name="string_supermarket_input_hint">Ejemplo: Soriana</string>
    <string name="string_title_change_price">The cost of the service has changed to %1$sMXN. Are you agree?</string>
    <string name="string_yes_agree">Yes, I agree</string>
    <string name="string_no_agree">No, I’m not agree</string>
    <string name="string_supermarket_name_hint">Please enter supermarket name</string>
</resources>