<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingTop="20dp"
    android:paddingEnd="15dp">

    <TextView
        android:id="@+id/textView35"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/string_incomplete_reason"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btn_reason1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_conflictive"
                android:fontFamily="@font/poppins" />

            <RadioButton
                android:id="@+id/btn_reason2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_refuse_trip"
                android:fontFamily="@font/poppins" />

            <RadioButton
                android:id="@+id/btn_reason3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_other_reason"
                android:fontFamily="@font/poppins" />
        </RadioGroup>

        <EditText
            android:id="@+id/txt_incomplete_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/string_incomplete_comment"
            android:fontFamily="@font/poppins"
            android:inputType="textPersonName"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>