<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/bottom_background">

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/string_passenger_why_cancel"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_didnot_showup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_effect_green"
        android:text="@string/string_didnot_showup"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_fake_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_effect_green"
        android:text="@string/string_fake_offer"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_refuse_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_effect_green"
        android:text="@string/string_refuse_trip"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_other_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_effect_green"
        android:text="@string/string_other_reason"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_gray"
        android:text="@string/string_close"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false" />

</LinearLayout>