<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_verification"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_entercode"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/poppins"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/confirm_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:inputType="phone" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_wrongcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_wrongcode"
            android:textColor="@color/colorRed"
            android:fontFamily="@font/poppins"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/string_sms" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+1234567890" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ripple_effect_black"
            android:text="@string/string_verify_phone"
            android:fontFamily="@font/poppins"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/send_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/string_notcode"
            android:textColor="@color/colorPink"
            android:fontFamily="@font/poppins"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>