<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/change_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/string_title_change_price"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_effect_green"
        android:text="@string/string_yes_agree"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_gray"
        android:text="@string/string_no_agree"
        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack" />
</LinearLayout>