<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_background"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="20dp"
    android:paddingEnd="10dp">

        <TextView
            android:id="@+id/txt_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_calculate_distance"
            android:fontFamily="@font/poppins"
            android:textAlignment="viewEnd" />

    <EditText
        android:id="@+id/txt_bottom_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="true"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:fontFamily="@font/poppins"
        android:textSize="24sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_payment_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/payment_button"
        android:drawableStart="@drawable/ic_payment_cash_small"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/string_cash"
        android:fontFamily="@font/poppins"
        android:textAlignment="viewStart"
        android:textAllCaps="false"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/btn_bottom_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="start"
                android:text="@string/string_cancel"
                android:fontFamily="@font/poppins"
                android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/btn_bottom_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="end"
            android:text="@string/string_ok"
            android:fontFamily="@font/poppins"
            android:textColor="@color/teal_700"
            android:visibility="gone" />
        </RelativeLayout>
</LinearLayout>