<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/string_cancel_reason_text"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txt_cancel_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reason_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripple_effect_green"
        android:fontFamily="@font/poppins"
        android:text="@string/string_cancel_trip"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_close_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_gray"
        android:text="@string/string_close"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false" />

</LinearLayout>